@@ -20,7 +20,6 @@ import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertThat;
 import static java.util.stream.Collectors.joining;
 
-import com.google.common.annotations.GwtIncompatible;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.gson.Gson;
@@ -34,7 +33,6 @@ import com.google.javascript.jscomp.JSError;
 import com.google.javascript.jscomp.WarningsGuard;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.stream.Stream;
@@ -73,6 +71,7 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
     this.enableTypeCheck();
     replaceTypesWithColors();
     disableCompareJsDoc();
+    enableDebugLogging(true);
   }
 
   @Override
@@ -905,22 +904,22 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
     this.allowSourcelessWarnings();
     this.propertiesThatMustDisambiguate =
         ImmutableSet.of(
-            "mustDisambiguate0", //
-            "mustDisambiguate1");
+            "invalid0", //
+            "invalid1");
 
     test(
         srcs(
             lines(
                 "class Foo {",
-                "  mustDisambiguate0() { }",
-                "  mustDisambiguate1() { }",
+                "  invalid0() { }",
+                "  invalid1() { }",
                 "}",
                 "",
                 "function use(/** ? */ x) {",
-                "  x.mustDisambiguate0",
-                "  x.mustDisambiguate1",
-                "  x.mustDisambiguate0",
-                "  x.mustDisambiguate1",
+                "  x.invalid0",
+                "  x.invalid1",
+                "  x.invalid0",
+                "  x.invalid1",
                 "}")),
         error(DisambiguateProperties.PROPERTY_INVALIDATION),
         error(DisambiguateProperties.PROPERTY_INVALIDATION));
@@ -1064,6 +1063,178 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
                 "}")));
   }
 
+  @Test
+  public void classStaticBlock() {
+    test(
+        srcs(
+            lines(
+                "class Foo {",
+                "  static {",
+                "    this.x = 1;",
+                "  }",
+                "}",
+                "Foo.x;",
+                "class Bar {",
+                "  static {",
+                "    this.x = 2;",
+                "  }",
+                "}")),
+        expected(
+            lines(
+                "class Foo {",
+                "  static {",
+                "    this.JSC$1_x = 1;",
+                "  }",
+                "}",
+                "Foo.JSC$1_x;",
+                "class Bar {",
+                "  static {",
+                "    this.JSC$2_x = 2;",
+                "  }",
+                "}")));
+    test(
+        srcs(
+            lines(
+                "class Foo {",
+                "  static x = 0;",
+                "  x = 0;",
+                "  static {",
+                "    this.x = 1;",
+                "  }",
+                "}",
+                "Foo.x;",
+                "let f = new Foo();",
+                "f.x;",
+                "class Bar {",
+                "  static x = 0;",
+                "  x = 0;",
+                "  static {",
+                "    this.x = 2;",
+                "  }",
+                "}")),
+        expected(
+            lines(
+                "class Foo {",
+                "  static JSC$1_x = 0;",
+                "  JSC$2_x = 0;",
+                "  static {",
+                "    this.JSC$1_x = 1;",
+                "  }",
+                "}",
+                "Foo.JSC$1_x;",
+                "let f = new Foo();",
+                "f.JSC$2_x;",
+                "class Bar {",
+                "  static JSC$3_x = 0;",
+                "  JSC$4_x = 0;",
+                "  static {",
+                "    this.JSC$3_x = 2;",
+                "  }",
+                "}")));
+  }
+
+  @Test
+  public void classStaticBlock_method() {
+    test(
+        srcs(
+            lines(
+                "class Foo {",
+                "  m() { }",
+                "}",
+                "",
+                "class Baz {",
+                "  static {",
+                "    let f = new Foo();",
+                "    f.m();",
+                "  }",
+                "}",
+                "class Bar {",
+                "  m() { }",
+                "}")),
+        expected(
+            lines(
+                "class Foo {",
+                "  JSC$1_m() { }",
+                "}",
+                "",
+                "class Baz {",
+                "  static {",
+                "    let f = new Foo();",
+                "    f.JSC$1_m();",
+                "  }",
+                "}",
+                "class Bar {",
+                "  JSC$5_m() { }",
+                "}")));
+
+    test(
+        srcs(
+            lines(
+                "class Foo {",
+                "  static m() { }",
+                "}",
+                "",
+                "class Baz {",
+                "  static m() { }",
+                "  static {",
+                "    Foo.m();",
+                "  }",
+                "}",
+                "class Bar {",
+                "  static m() { }",
+                "}")),
+        expected(
+            lines(
+                "class Foo {",
+                "  static JSC$1_m() { }",
+                "}",
+                "",
+                "class Baz {",
+                "  static JSC$2_m() { }",
+                "  static {",
+                "    Foo.JSC$1_m();",
+                "  }",
+                "}",
+                "class Bar {",
+                "  static JSC$3_m() { }",
+                "}")));
+  }
+
+  @Test
+  public void testClassStaticBlock_function() {
+    test(
+        srcs(
+            lines(
+                "/** @constructor */",
+                "function Foo() { };",
+                "",
+                "class Foo2 extends Foo {",
+                "  static z() { }",
+                "  static {",
+                "    Foo.z = 0;",
+                "  }",
+                "}",
+                "",
+                "class Other {",
+                "  z() { }",
+                "}")),
+        expected(
+            lines(
+                "/** @constructor */",
+                "function Foo() { };",
+                "",
+                "class Foo2 extends Foo {",
+                "  static JSC$1_z() { }",
+                "  static {",
+                "    Foo.JSC$1_z = 0;",
+                "  }",
+                "}",
+                "",
+                "class Other {",
+                "  JSC$3_z() { }",
+                "}")));
+  }
+
   private static final class SilenceNoiseGuard extends WarningsGuard {
     private static final ImmutableSet<DiagnosticType> RELEVANT_DIAGNOSTICS =
         ImmutableSet.of(DisambiguateProperties.PROPERTY_INVALIDATION);
@@ -1108,7 +1279,6 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
                 "}")));
   }
 
-  @GwtIncompatible
   private static String loadFile(Path path) {
     try (Stream<String> lines = Files.lines(path)) {
       return lines.collect(joining("\n"));
@@ -1117,11 +1287,10 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
     }
   }
 
-  @GwtIncompatible
   private ImmutableList<Path> debugLogFiles() {
     try {
       Path dir =
-          Paths.get(
+          Path.of(
               this.getLastCompiler().getOptions().getDebugLogDirectory().toString(),
               DisambiguateProperties.class.getSimpleName());
 
@@ -1137,6 +1306,6 @@ public final class DisambiguatePropertiesTest extends CompilerTestCase {
     assertThat(src).isNotEmpty();
 
     Class<?> clazz = (src.charAt(0) == '{') ? LinkedHashMap.class : ArrayList.class;
-    new Gson().fromJson(src, clazz); // Throws if invalid
+    var unused = new Gson().fromJson(src, clazz); // Throws if invalid
   }
 }
