@@ -20,10 +20,8 @@ import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.common.truth.extensions.proto.ProtoTruth.assertThat;
-import static com.google.javascript.rhino.testing.Asserts.assertThrows;
 import static java.util.stream.Collectors.joining;
 
-import com.google.common.annotations.GwtIncompatible;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.gson.Gson;
@@ -39,11 +37,11 @@ import com.google.protobuf.InvalidProtocolBufferException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
+import org.jspecify.annotations.Nullable;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -54,7 +52,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
 
   private Consumer<TypedAst> astConsumer;
   // individual test cases may override this
-  private ImmutableSet<String> typesToForwardDeclare = null;
+  private @Nullable ImmutableSet<String> typesToForwardDeclare = null;
 
   // Proto fields commonly ignored in tests because hardcoding their values is brittle
   private static final ImmutableList<FieldDescriptor> BRITTLE_TYPE_FIELDS =
@@ -69,14 +67,13 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
     enableTypeCheck();
     this.typesToForwardDeclare = ImmutableSet.of();
     enableSourceInformationAnnotator();
+    enableDebugLogging(true);
   }
 
   @Override
   protected CompilerPass getProcessor(Compiler compiler) {
     return new SerializeTypedAstPass(
-        compiler,
-        SerializationOptions.INCLUDE_DEBUG_INFO_AND_EXPENSIVE_VALIDITY_CHECKS,
-        astConsumer);
+        compiler, astConsumer, SerializationOptions.builder().setIncludeDebugInfo(false).build());
   }
 
   @Override
@@ -90,7 +87,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
 
   @Test
   public void testAst_constNumber() throws InvalidProtocolBufferException {
-    TypePointer numberType = pointerForType(PrimitiveType.NUMBER_TYPE);
+    int numberType = PrimitiveType.NUMBER_TYPE.getNumber();
     SerializationResult result = compile("const x = 5;");
 
     assertThat(result.sourceNodes.get(0))
@@ -130,6 +127,9 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
   @Test
   public void testAst_typeSummaryFiles_areNotSerialized_orSearchedForTypes() {
     enableCreateModuleMap();
+    // SerializeTypedAstPass will drop the type summary files, which live on the externs root, to
+    // avoid serializing them.
+    allowExternsChanges();
 
     Externs closureExterns = externs(new TestExternsBuilder().addClosureExterns().build());
     SourceFile mandatorySource = SourceFile.fromCode("mandatory.js", "/* mandatory source */");
@@ -159,7 +159,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
 
   @Test
   public void testAst_letString() throws InvalidProtocolBufferException {
-    TypePointer stringType = pointerForType(PrimitiveType.STRING_TYPE);
+    int stringType = PrimitiveType.STRING_TYPE.getNumber();
     SerializationResult result = compile("let s = 'hello';");
 
     assertThat(result.sourceNodes.get(0))
@@ -210,6 +210,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
                         .addChild(
                             AstNode.newBuilder()
                                 .setKind(NodeKind.TAGGED_TEMPLATELIT)
+                                .setBooleanProperties(1L << NodeProperty.FREE_CALL.getNumber())
                                 .addChild(
                                     AstNode.newBuilder()
                                         .setKind(NodeKind.IDENTIFIER)
@@ -235,10 +236,32 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
   }
 
   @Test
-  public void testAst_cannotSerializeCast() {
+  public void testAst_numberInCast() {
     // CAST nodes in JSCompiler are a combination of a child node + JSDoc @type. Because we don't
     // serialize JSDoc @types it doesn't make sense to serialize the CAST node.
-    assertThrows(Exception.class, () -> compileToAstNode("/** @type {?} */ (1);"));
+    int unknownType = PrimitiveType.UNKNOWN_TYPE.getNumber();
+    assertThat(compileToAstNode("/** @type {?} */ (1);"))
+        .ignoringFieldDescriptors(BRITTLE_TYPE_FIELDS)
+        .ignoringFieldDescriptors(
+            AstNode.getDescriptor().findFieldByName("relative_line"),
+            AstNode.getDescriptor().findFieldByName("relative_column"))
+        .isEqualTo(
+            AstNode.newBuilder()
+                .setKind(NodeKind.SOURCE_FILE)
+                .addChild(
+                    AstNode.newBuilder()
+                        .setKind(NodeKind.EXPRESSION_STATEMENT)
+                        .addChild(
+                            AstNode.newBuilder()
+                                .setKind(NodeKind.NUMBER_LITERAL)
+                                .setBooleanProperties(
+                                    (1L << NodeProperty.IS_PARENTHESIZED.getNumber())
+                                        | (1L << NodeProperty.COLOR_FROM_CAST.getNumber()))
+                                .setDoubleValue(1)
+                                .setType(unknownType)
+                                .build())
+                        .build())
+                .build());
   }
 
   @Test
@@ -259,7 +282,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
                         .addChild(
                             AstNode.newBuilder()
                                 .setKind(NodeKind.FUNCTION_LITERAL)
-                                .addBooleanProperty(NodeProperty.ARROW_FN)
+                                .setBooleanProperties(1L << NodeProperty.ARROW_FN.getNumber())
                                 .addChild(
                                     AstNode.newBuilder()
                                         .setKind(NodeKind.IDENTIFIER)
@@ -292,12 +315,12 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
         .isEqualTo(
             AstNode.newBuilder()
                 .setKind(NodeKind.SOURCE_FILE)
-                .addBooleanProperty(NodeProperty.GOOG_MODULE)
+                .setBooleanProperties(1L << NodeProperty.GOOG_MODULE.getNumber())
                 // `/** @const */ var module$exports$a$b$c = {};`
                 .addChild(
                     AstNode.newBuilder()
                         .setKind(NodeKind.VAR_DECLARATION)
-                        .addBooleanProperty(NodeProperty.IS_NAMESPACE)
+                        .setBooleanProperties(1L << NodeProperty.IS_NAMESPACE.getNumber())
                         .setJsdoc(OptimizationJsdoc.newBuilder().addKind(JsdocTag.JSDOC_CONST))
                         .addChild(
                             AstNode.newBuilder()
@@ -376,7 +399,7 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
                 .getSourceFileList()
                 .get(baseLibraryStart.getSourceFile() - 1)
                 .getFilename())
-        .isEqualTo(" [synthetic:base] ");
+        .endsWith("js/base.js");
     // children of the synthetic subtree default to the root's file [synthetic:base]
     assertThat(baseLibraryStart.getChild(0).getSourceFile()).isEqualTo(0);
     // "let s = 'hello'" defaults to the parent's file 'testcode'
@@ -399,6 +422,55 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
 
     assertThat(result.ast.getExternsSummary().getPropNamePtrList())
         .containsAtLeast(result.findInStringPool("method"), result.findInStringPool("arg"));
+  }
+
+  @Test
+  public void serializeInlineSourceMappingURL() throws InvalidProtocolBufferException {
+    // We want TypedAST to support inline source maps (which are input source maps passed
+    // by embedding a `//# sourceMappingURL=<url>` where <url> is a base64-encoded "data url").
+    String sourceMapTestCode =
+        lines(
+            "var X = (function () {",
+            "    function X(input) {",
+            "        this.y = input;",
+            "    }",
+            "    return X;",
+            "}());");
+
+    String base64Prefix = "data:application/json;base64,";
+    String encodedSourceMap =
+        "eyJ2ZXJzaW9uIjozLCJmaWxlIjoiZm9vLmpzIiwic291cmNlUm9vdCI6IiIsInNvdXJjZXMiOlsiZm9vLnRzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBO0lBR0UsV0FBWSxLQUFhO1FBQ3ZCLElBQUksQ0FBQyxDQUFDLEdBQUcsS0FBSyxDQUFDO0lBQ2pCLENBQUM7SUFDSCxRQUFDO0FBQUQsQ0FBQyxBQU5ELElBTUM7QUFFRCxPQUFPLENBQUMsR0FBRyxDQUFDLElBQUksQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMifQ==";
+
+    String code = sourceMapTestCode + "\n//# sourceMappingURL=" + base64Prefix + encodedSourceMap;
+
+    SerializationResult result = compile(code);
+
+    LazyAst lazyAst = result.ast.getCodeAstList().get(0);
+    String sourceMappingURL = lazyAst.getSourceMappingUrl();
+
+    assertThat(sourceMappingURL).isEqualTo(encodedSourceMap); // Do not serizile the base-64 prefix.
+  }
+
+  @Test
+  public void doesNotSerializeInputSourceMappingURL() throws InvalidProtocolBufferException {
+    // We do not want TypedAST to support input source maps (source maps in separate files).
+    String sourceMapTestCode =
+        lines(
+            "var X = (function () {",
+            "    function X(input) {",
+            "        this.y = input;",
+            "    }",
+            "    return X;",
+            "}());");
+
+    String code = sourceMapTestCode + "\n//# sourceMappingURL=foo.js.map";
+
+    SerializationResult result = compile(code);
+
+    LazyAst lazyAst = result.ast.getCodeAstList().get(0);
+    String sourceMappingURL = lazyAst.getSourceMappingUrl();
+
+    assertThat(sourceMappingURL).isEmpty();
   }
 
   private AstNode compileToAstNode(String source) {
@@ -469,10 +541,6 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
     return compile(externs(externs), srcs(source));
   }
 
-  private static TypePointer pointerForType(PrimitiveType primitive) {
-    return TypePointer.newBuilder().setPoolOffset(primitive.getNumber()).build();
-  }
-
   private void generateDiagnosticFiles() {
     compile(
         lines(
@@ -487,7 +555,6 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
             "const /** !Foo1 */ typeMismatch = new Foo0();"));
   }
 
-  @GwtIncompatible
   private static String loadFile(Path path) {
     try (Stream<String> lines = Files.lines(path)) {
       return lines.collect(joining("\n"));
@@ -496,11 +563,10 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
     }
   }
 
-  @GwtIncompatible
   private ImmutableList<Path> debugLogFiles() {
     try {
       Path dir =
-          Paths.get(
+          Path.of(
               this.getLastCompiler().getOptions().getDebugLogDirectory().toString(),
               SerializeTypesToPointers.class.getSimpleName());
 
@@ -516,6 +582,6 @@ public final class SerializeTypedAstPassTest extends CompilerTestCase {
     assertThat(src).isNotEmpty();
 
     Class<?> clazz = (src.charAt(0) == '{') ? LinkedHashMap.class : ArrayList.class;
-    new Gson().fromJson(src, clazz); // Throws if invalid
+    var unused = new Gson().fromJson(src, clazz); // Throws if invalid
   }
 }
